Fixed scrollbar on screen bug

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -139,11 +139,13 @@ html, body, .gameContainer, .root {
 
 .introScreen, .deathScreen, .winningScreen {
   box-sizing: border-box;
+  position: relative;
+  top: 50px;
   outline: none;
   height: 500px;
   width: 360px;
   padding: 80px 55px;
-  margin: 50px auto;
+  margin: 0 auto;
   background-size: cover;
   text-align: center;
 }
